force-app/main/default/src/objects/PJN_Channel_Consent__c/PJN_Channel_Consent__c.object-meta.xml
<CustomObject>
    <description>Object to track patient consent preferences per contact channel.</description>
    <label>Channel Consent</label>
    <nameField>
        <displayFormat>CC-{000000}</displayFormat>
        <label>Channel Consent Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Channel Consent</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>