force-app/main/default/src/objects/PJN_Channel_Consent__c/fields/Latest_Marketing_Cloud_API_Status_MVN__c.field-meta.xml
<CustomField>
    <fullName>Latest_Marketing_Cloud_API_Status_MVN__c</fullName>
    <description>Stores the result of the most recent status update in Marketing Cloud. -- Mavens, 17 Jul 2020</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Latest Marketing Cloud API Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>