force-app/main/default/src/objects/PJN_Channel_Consent__c/fields/Pending_Consent_Status_Batch_MVN__c.field-meta.xml
<CustomField>
    <fullName>Pending_Consent_Status_Batch_MVN__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether ChannelConsentStatusBatchMVN should process the channel consent. Set to true when the API can not be called immediately</description>
    <inlineHelpText>Whether ChannelConsentStatusBatchMVN should process the channel consent. Set to true when the API can not be called immediately</inlineHelpText>
    <label>Pending Consent Status Batch</label>
    <type>Checkbox</type>
</CustomField>