force-app/main/default/src/objects/PJN_Channel_Consent__c/fields/PJN_Capture_Date__c.field-meta.xml
<CustomField>
    <fullName>PJN_Capture_Date__c</fullName>
    <description>Date field to capture channel consent date.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Capture Date</label>
    <type>Date</type>
</CustomField>