force-app/main/default/src/objects/PJN_Channel_Consent__c/fields/PJN_Capture_Source__c.field-meta.xml
<CustomField>
    <fullName>PJN_Capture_Source__c</fullName>
    <description>Text (255) Source where consent channel was captured.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Capture Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>