force-app/main/default/src/objects/PJN_Channel_Consent__c/fields/PJN_Contact_Information__c.field-meta.xml
<CustomField>
    <fullName>PJN_Contact_Information__c</fullName>
    <description>Lookup(Contact Information), data points of contact.</description>
    <label>Contact Information</label>
    <referenceTo>PJN_Contact_Information__c</referenceTo>
    <relationshipLabel>Channel Consent</relationshipLabel>
    <relationshipName>PJN_Channel_Consent</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>