force-app/main/default/src/objects/PJN_Channel_Consent__c/fields/PJN_Contact_Type__c.field-meta.xml
<CustomField>
    <fullName>PJN_Contact_Type__c</fullName>
    <description>Picklist of types for channel contact.</description>
    <label>Contact Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Address</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Fax</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>