force-app/main/default/src/objects/PJN_Channel_Consent__c/fields/PJN_Data_Use_Purpose__c.field-meta.xml
<CustomField>
    <fullName>PJN_Data_Use_Purpose__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The purpose for which consent was given to use the contact information record.</description>
    <label>Data Use Purpose</label>
    <referenceTo>DataUsePurpose</referenceTo>
    <relationshipLabel>Channel Consent</relationshipLabel>
    <relationshipName>PJN_Channel_Consent</relationshipName>
    <type>Lookup</type>
</CustomField>