force-app/main/default/src/objects/PJN_Channel_Consent__c/fields/PJN_Effective_From__c.field-meta.xml
<CustomField>
    <fullName>PJN_Effective_From__c</fullName>
    <description>Date/Time of the consent start.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Effective From</label>
    <type>DateTime</type>
</CustomField>