force-app/main/default/src/objects/PJN_Channel_Consent__c/fields/PJN_Effective_To__c.field-meta.xml
<CustomField>
    <fullName>PJN_Effective_To__c</fullName>
    <description>Date/time of consent end.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Effective To</label>
    <type>DateTime</type>
</CustomField>